@@ -51,4 +51,6 @@ gboolean itip_publish_begin (ECalComponent *pub_comp, ECal *client,
 gboolean reply_to_calendar_comp (ECalComponentItipMethod method, ECalComponent *send_comp,
 				ECal *client, gboolean reply_all, icalcomponent *zones, GSList *attachments_list);
 
+gboolean is_icalcomp_valid (icalcomponent *icalcomp);
+
 #endif
