@@ -1,3 +1,10 @@
+2008-05-29  Milan Crha  <mcrha@redhat.com>
+
+	** Fix for bug #535459
+
+	* itip-formatter.c: (extract_itip_data):
+	Do not use component when sanity check fails.
+
 2008-05-22  Matthew Barnes  <mbarnes@redhat.com>
 
 	** Fixes part of bug #534360
